--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Marvel</title>
+    <title>Tiempo en Uy</title>
 </head>
 <body>
-    <button type="button" id="ruleta">Presióname</button>
-    <p id="ruletaData"></p>
+    <div class="container">
+        <br>
+        <form action="" id="form">
+            <input type="text" id="ciudad">
+            <button type="submit" id="btnCiudad" class="btn btn-danger">Pronosticar</button>
+        </form>
+        <p id="mensajeError">
+            
+        </p>
+        <div class="" id="infoCiudad">
+
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
