--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
     <title>Tiempo en Uy</title>
 </head>
 <body>
-    <div class="container">
+    <div class="box">
         <br>
-        <form action="" id="form">
-            <input type="text" id="ciudad">
-            <button type="submit" id="btnCiudad" class="btn btn-danger">Pronosticar</button>
+        <img src="/giphy.gif" alt="imagen representativa" height="250px" width="250px" style="margin-left: 135px;">
+        <hr>
+        <form action="" id="form" class="text-center">
+            <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
+            <button type="submit" id="btnCiudad" class="btn btn-danger">Pronóstico</button>
         </form>
         <p id="mensajeError">
             
         </p>
-        <div class="" id="infoCiudad">
-
+        <div id="infoCiudad">
+            
         </div>
     </div>
     <script src="index.js"></script>
