--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <div class="box">
         <br>
         <img src="/giphy.gif" alt="imagen representativa" height="250px" width="250px" style="margin-left: 135px;">
-        <hr>
         <form action="" id="form" class="text-center">
             <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
             <button type="submit" id="btnCiudad" class="btn btn-danger">Pronóstico</button>
         </form>
-        <p id="mensajeError">
+        <p id="mensajeError" class="text-danger shadow-lg bg-body-tertiary rounded ">
             
         </p>
-        <div id="infoCiudad">
+        <div class="modal-content shadow-lg p-3 mb-5 bg-body-tertiary rounded" id="infoCiudad">
             
         </div>
     </div>
