--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
     <title>Tiempo en Uy</title>
 </head>
+
+<style>
+    body {
+        background: url(/altocumulus.jpg);
+    }
+</style>
+
 <body>
-    <div class="box">
-        <br>
-        <img src="/giphy.gif" alt="imagen representativa" height="250px" width="250px" style="margin-left: 135px;">
-        <form action="" id="form" class="text-center">
-            <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
-            <button type="submit" id="btnCiudad" class="btn btn-danger">Pronóstico</button>
-        </form>
-        <p id="mensajeError" class="text-danger shadow-lg bg-body-tertiary rounded ">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 m-auto  justify-content-center align-content-center">
+                <br>
+                <form action="" id="form" class="text-center">
+                    <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
+                    <button type="submit" id="btnCiudad" class="btn btn-danger">Pronóstico</button>
+                </form>
+                <p id="mensajeError" class="text-danger shadow-lg bg-body-tertiary rounded ">
             
-        </p>
-        <div class="modal-content shadow-lg p-3 mb-5 bg-body-tertiary rounded" id="infoCiudad">
-            
+                </p>
+                <div class="modal-content shadow-lg p-3 mb-5 bg-body-tertiary rounded" id="infoCiudad">
+                </div>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
