--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 m-auto  justify-content-center align-content-center">
+            <div class="col-4 m-auto justify-content-center align-content-center">
                 <br>
                 <form action="" id="form" class="text-center">
                     <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
@@ -27,6 +27,9 @@
                 </p>
                 <div class="modal-content shadow-lg p-3 mb-5 bg-body-tertiary rounded" id="infoCiudad">
                 </div>
+                <p> Para conocer más sobre API y sus funcionalidades presione
+                    <a href="./resumenApi.png">aquí.</a>
+                </p>
             </div>
         </div>
     </div>
