--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
     body {
-        background: url(/altocumulus.jpg);
+        background-image: url(/altocumulus.jpg);
     }
 </style>
 
@@ -20,7 +20,7 @@
                 <br>
                 <form action="" id="form" class="text-center">
                     <input type="text" id="ciudad" placeholder="Ingrese su cuidad">
-                    <button type="submit" id="btnCiudad" class="btn btn-danger">Pronóstico</button>
+                    <button type="submit" id="btnCiudad" class="btn btn-primary">Pronóstico</button>
                 </form>
                 <p id="mensajeError" class="text-danger shadow-lg bg-body-tertiary rounded ">
             
