--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
     body {
-        background-image: url(/altocumulus.jpg);
+        background-image: url(./altocumulus.jpg);
     }
 </style>
 
