--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
     body {
-        background-image: url(./altocumulus.jpg);
+        background-image: url("./altocumulus.jpg");
     }
 </style>
 
@@ -27,7 +27,7 @@
                 </p>
                 <div class="modal-content shadow-lg p-3 mb-5 bg-body-tertiary rounded" id="infoCiudad">
                 </div>
-                <p> Para conocer más sobre API y sus funcionalidades presione
+                <p>Para conocer más sobre API y sus funcionalidades presione
                     <a href="./resumenApi.png">aquí.</a>
                 </p>
             </div>
